--- a/.github/workflows/Recovery Build_sn.yml
+++ b/.github/workflows/Recovery Build_sn.yml
@@ -14,7 +14,7 @@ on:
       DEVICE_TREE_URL:
         description: 'DEVICE_TREE_URL'
         required: true
-        default: 'https://github.com/wings110/device_oneplus_waffle-TWRP'
+        default: 'https://github.com/wings110/device_oneplus_ace3pro-TWRP'
       DEVICE_TREE_BRANCH:
         description: 'DEVICE_TREE_BRANCH'
         required: true
@@ -22,7 +22,7 @@ on:
       DEVICE_PATH:
         description: 'DEVICE_PATH'
         required: true
-        default: 'device/oneplus/waffle'
+        default: 'device/oneplus/corvette'
       COMMON_TREE_URL:
         description: 'COMMON_TREE_URL (if no common tree, leave blank)'
         required: false
@@ -34,11 +34,11 @@ on:
       DEVICE_NAME:
         description: 'DEVICE_NAME'
         required: true
-        default: 'waffle'
+        default: 'corvette'
       MAKEFILE_NAME:
         description: 'MAKEFILE_NAME'
         required: true
-        default: 'twrp_waffle'
+        default: 'twrp_corvette'
       BUILD_TARGET:
         description: 'BUILD_TARGET'
         required: true
@@ -204,7 +204,7 @@ jobs:
         tag_name: ${{ env.TIMESTAMP }}-Testimg
         body: |
           Manifest: ${{ github.event.inputs.MANIFEST_BRANCH }}
-          Device: OnePlus 12 (Waffle)
+          Device: OnePlus ACE3PRO (corvette)
           Target: Android 14/Android 15
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
